[metadata]
name = jax_linop
description = Convenience functions for adding arbitrary linear operations to JAX.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.mpcdf.mpg.de/mtr/jax_linop
author = Martin Reinecke
author_email = martin@mpa-garching.mpg.de
python_requires = >=3.8
license = BSD3
classifiers =
  Development Status :: 5 - Production/Stable
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Physics
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: C++
  Programming Language :: Python
  Intended Audience :: Science/Research
project_urls =
  Bug Tracker = https://gitlab.mpcdf.mpg.de/mtr/jax_linop/issues
  Source Code = https://gitlab.mpcdf.mpg.de/mtr/jax_linop
  README = https://gitlab.mpcdf.mpg.de/mtr/ducc/-/blob/main/README.md

[options]
include_package_data = True
packages = 
install_requires = numpy>=1.17.0; jax>=0.4
