[metadata]
name = jaxbind
description = Bind any function written in another language to JAX with support for JVP/VJP/batching/jit compilation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NIFTy-PPL/JAXbind
author = Gordian Edenhofer, Martin Reinecke, Jakob Roth
author_email = martin@mpa-garching.mpg.de
python_requires = >=3.8
license = BSD2
classifiers =
  Development Status :: 5 - Production/Stable
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Physics
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: C++
  Programming Language :: Python
  Intended Audience :: Science/Research
project_urls =
  Bug Tracker = https://github.com/NIFTy-PPL/JAXbind/issues
  Source Code = https://github.com/NIFTy-PPL/JAXbind
  README = https://github.com/NIFTy-PPL/JAXbind/blob/main/README.md

[options]
include_package_data = True
packages = 
install_requires = numpy>=1.17.0; jax>=0.4; jaxlib
